Add canvas link to home page

--- a/phil105_classplan.org
+++ b/phil105_classplan.org
@@ -334,7 +334,7 @@ might be good or bad.
 :EXPORT_FILE_NAME: home
 :END:
 
-This is the homepage for *PHIL 105* -- The Philosophy of Food.
+This is the local landing page for *PHIL 105* -- The Philosophy of Food.
 
 Food is a central part of human life, both in its production and consumption.
 Food is closely tied to the values that we hold, and the cultural identities
@@ -364,6 +364,8 @@ questions we shall pursue include:
   such identities?
 
 The course syllabus is available here: [[file:/materials/phil105-syllabus.pdf][PDF]] | [[file:/materials/phil105-syllabus.html][HTML]]
+
+All course materials are on the course website on [[https://canvas.unl.edu/courses/49195][canvas]]. 
 
 *** Contact
 :PROPERTIES:
