Add website link in contact page

--- a/phil105-classplan.org
+++ b/phil105-classplan.org
@@ -381,6 +381,7 @@ Dr. Colin McLear\\
 Office: 1003 Oldfather Hall\\
 Office Hours: T 1:00-3:20 and by appointment\\
 Email: [[mailto:mclear@unl.edu][mclear@unl.edu]]
+Website: [www.colinmclear.net](www.colinmclear.net)
 
 Email is the best way to reach me. I answer emails as soon as I can, but
 primarily only on /weekdays/. 
